tests/ui/imports/shadow-glob-module-resolution-2.stderr
error[E0432]: unresolved import `e`
  --> $DIR/shadow-glob-module-resolution-2.rs:13:5
   |
LL | use e as b;
   |     -^^^^^
   |     |
   |     no `e` in the root
   |     help: a similar name exists in the module: `a`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
